Closed Bug 603677 Opened 14 years ago Closed 14 years ago

Crash on startup due to GetProto on an XPCWrappedNative being null with Bugzilla Tweaks jetpack installed

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: peterv)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Build: current tip tracemonkey build

Steps to reproduce:
1)  Start your browser
2)  Install https://addons.mozilla.org/en-US/firefox/addon/187588/
3)  If needed, restart the browser

Expected results: silly jetpack installed

Actual results: Crash:

(gdb) frame 1
#1  0x0000000100f7d015 in xpc::WrapperFactory::PrepareForWrapping (cx=0x120b76830, scope=0x12a26e070, obj=0x12a242850, flags=0) at /Users/bzbarsky/mozilla/tracemonkey/mozilla/js/src/xpconnect/wrappers/WrapperFactory.cpp:112
112         if (wn->GetProto()->ClassIsDOMObject())
(gdb) p wn->GetProto()
$1 = (XPCWrappedNativeProto *) 0x0
(gdb) p wn->mIdentity
$2 = (nsXPCComponents_Utils *) 0x120b305e0
(gdb) jsstack 
0 <TOP LEVEL> ["resource://jid0-qbniplfdfa4lpdrjhac6vbqn20q-jetpack-core-lib/securable-module.js -> resource://jid0-qbniplfdfa4lpdrjhac6vbqn20q-jetpack-core-lib/memory.js":37]
    this = [object Sandbox]
Attached patch v1Splinter Review
Assignee: nobody → peterv
Status: NEW → ASSIGNED
Attachment #482591 - Flags: review?(mrbkap)
Attachment #482591 - Flags: review?(mrbkap) → review+
http://hg.mozilla.org/tracemonkey/rev/a73a44ad3aa1
OS: Mac OS X → All
Hardware: x86 → All
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/a73a44ad3aa1
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Blocks: 580128
You need to log in before you can comment on or make changes to this bug.