Fix for bug 603677 (Crash on startup due to GetProto on an XPCWrappedNative being null with Bugzilla Tweaks jetpack installed), compartments followup. r=mrbkap.

--HG--
extra : rebase_source : 884494ce295e8e2222de4f3bafb02d4a96e2bcc2